added student info page

--- a/register.html
+++ b/register.html
@@ -132,9 +132,8 @@
 								class="btn btn-primary col-sm-6 col-12 takebutton inria"
 								id="submit"
 								type="submit"
-								onclick="document.location.href='index.html';"
 							>
-								CHECK INFO
+								UPLOAD INFO
 							</button>
 						</div>
 						<div class="row selrow pt-2 pb-2">
