--- a/student.html
+++ b/student.html
@@ -38,37 +38,25 @@
 				<div class="col-4"></div>
 				<div class="row centerbox col-12 col-sm-4">
 					<div class="row selrow">
-						<span class="centertext col-12">UNIZIK STUDENT BIODATA PORTAL</span>
+						<span class="centertext col-12">STUDENT BIODATA</span>
 					</div>
-					<div class="row selrow">
-						<div class="mb-3 col-12 col-sm-8">
-							<input
-								type="text"
-								class="form-control regbox inria"
-								id="Surname"
-								placeholder="REGISTRATION NUMBER"
-							/>
-						</div>
+                    <div class="row selrow">
+						<span class="studenttext col-12" id="postsurname">SURNAME:</span>
 					</div>
-					<div class="row selrow">
-						<button
-							class="btn btn-primary col-sm-8 col-12 takebutton inria"
-							id="submit"
-							type="submit"
-						>
-							CHECK INFO
-						</button>
+                    <div class="row selrow">
+						<span class="studenttext col-12" id="postfirstname">FIRSTNAME:</span>
 					</div>
-					<div class="row selrow pt-2 pb-2">
-						<a style="color: blue" class="inria" id="ain" href="register.html"
-							>Register a new student?</a
-						> or <a style="color: blue" class="inria" href="index.html"
-							>view all students?</a
-						>
-				</div>
-			</div>
-			<div class="col-4"></div>
-		</div>
+                    <div class="row selrow">
+						<span class="studenttext col-12" id="postdate">DOB:</span>
+					</div>
+                    <div class="row selrow">
+						<span class="studenttext col-12" id="postphone">PHONENUMBER:</span>
+					</div>
+                    <div class="row selrow">
+						<span class="studenttext col-12" id="postreg">REGNUMBER:</span>
+					</div>
+                </div>
+                <div class="col-4"></div>
 	</body>
 	<script src="app.js"></script>
 </html>
