added student info page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<div class="row selrow pt-2 pb-2">
 						<a style="color: blue" class="inria" id="ain" href="register.html"
 							>Register a new student?</a
-						> or <a style="color: blue" class="inria" href="index.html"
+						> or <a style="color: blue" class="inria" href="table.html"
 							>view all students?</a
 						>
 				</div>
