logo links to index

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-dark bg-dark">
-			<a class="navbar-brand" href="#">
+			<a class="navbar-brand" href="index.html">
 				<img src="images\UNIZIK_Main_Logo_.webp" alt="" />
 			</a>
 		</nav>
 		<div class="container-fluid topdiv">
 			<div class="row maindiv">
-				<div class="col-4"></div>
+				<div class="col-sm-4 col-0"></div>
 				<div class="row centerbox col-12 col-sm-4">
 					<div class="row selrow">
 						<span class="centertext col-12">UNIZIK STUDENT BIODATA PORTAL</span>
@@ -67,7 +67,7 @@
 						>
 				</div>
 			</div>
-			<div class="col-4"></div>
+			<div class="col-sm-4 col-0"></div>
 		</div>
 	</body>
 	<script src="app.js"></script>
