--- a/table.html
+++ b/table.html
@@ -29,7 +29,7 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-dark bg-dark topnav">
-			<a class="navbar-brand" href="#">
+			<a class="navbar-brand" href="index.html">
 				<img src="images\UNIZIK_Main_Logo_.webp" alt="" />
 			</a>
 		</nav>
