--- a/table.html
+++ b/table.html
@@ -56,7 +56,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<button onclick="addtab();" style="width: auto"></button>
+			<button onclick="addtab();" style="width: auto">CLICK ME</button>
 		</div>
 	</body>
 	<script src="app.js"></script>
