--- a/table.html
+++ b/table.html
@@ -45,16 +45,7 @@
 						<th scope="col">Registration Number</th>
 					</tr>
 				</thead>
-				<tbody id="table">
-					<tr>
-						<th scope="row">1</th>
-						<td>Mark</td>
-						<td>Otto</td>
-						<td>@mdo</td>
-						<td>test</td>
-						<td>test2</td>
-					</tr>
-				</tbody>
+				<tbody id="table"></tbody>
 			</table>
 			<button onclick="addtab();" style="width: auto">CLICK ME</button>
 		</div>
