single user functionality

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 							class="btn btn-primary col-sm-8 col-12 takebutton inria"
 							id="submit"
 							type="submit"
+							onclick="addOneStudent();"
 						>
 							CHECK INFO
 						</button>
