single user functionality

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<div class="container-fluid topdiv">
 			<div class="row maindiv">
 				<div class="col-sm-4 col-0"></div>
-				<div class="row centerbox col-12 col-sm-4">
+				<div class="row centerbox col-12 col-sm-4 col-l-8">
 					<div class="row selrow">
 						<span class="centertext col-12">UNIZIK STUDENT BIODATA PORTAL</span>
 					</div>
