single user functionality

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 							>view all students?</a
 						>
 				</div>
+					<div class="row selrow" style="color: red;" id="err"></div>
 			</div>
 			<div class="col-sm-4 col-0"></div>
 		</div>
