--- a/student.html
+++ b/student.html
@@ -40,20 +40,7 @@
 					<div class="row selrow">
 						<span class="centertext col-12">STUDENT BIODATA</span>
 					</div>
-                    <div class="row selrow">
-						<span class="studenttext col-12" id="postsurname">SURNAME:</span>
-					</div>
-                    <div class="row selrow">
-						<span class="studenttext col-12" id="postfirstname">FIRSTNAME:</span>
-					</div>
-                    <div class="row selrow">
-						<span class="studenttext col-12" id="postdate">DOB:</span>
-					</div>
-                    <div class="row selrow">
-						<span class="studenttext col-12" id="postphone">PHONENUMBER:</span>
-					</div>
-                    <div class="row selrow">
-						<span class="studenttext col-12" id="postreg">REGNUMBER:</span>
+					<div class="row selrow" id="studentLayout">
 					</div>
                 </div>
                 <div class="col-4"></div>
