single user functionality

--- a/index.html
+++ b/index.html
@@ -51,15 +51,14 @@
 						</div>
 					</div>
 					<div class="row selrow">
-						<a href="student.html">
 						<button
 							class="btn btn-primary col-sm-8 col-12 takebutton inria"
 							id="submit"
 							type="submit"
+							onclick="addOneStudent();"
 						>
 							CHECK INFO
 						</button>
-						</a>
 					</div>
 					<div class="row selrow pt-2 pb-2">
 						<a style="color: blue" class="inria" id="ain" href="register.html"
