single user functionality

--- a/student.html
+++ b/student.html
@@ -42,7 +42,7 @@
 					</div>
 					<div class="row selrow" id="studentLayout">
 					</div>
-					<button onclick="printOne()">CLICK ME</button>
+					<button onclick="printOne();">CLICK ME</button>
                 </div>
                 <div class="col-4"></div>
 	</body>
