single user functionality

--- a/student.html
+++ b/student.html
@@ -27,7 +27,7 @@
 		<link rel="stylesheet" href="style.css" />
 		<title>STUDENT DATA</title>
 	</head>
-	<body onload="printOne();">
+	<body id="stdntbdy">
 		<nav class="navbar navbar-dark bg-dark">
 			<a class="navbar-brand" href="index.html">
 				<img src="images\UNIZIK_Main_Logo_.webp" alt="" />
