--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 				</div>
 					<div class="row selrow" style="color: red;" id="err"></div>
 			</div>
+			<div class="" id="studentLayout"></div>
 			<div class="col-sm-4 col-0"></div>
 		</div>
 	</body>
