single user functionality

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						>
 				</div>
 					<div class="row selrow" style="color: red;" id="err"></div>
-					<div class="" id="studentLayout"></div>
+					<div class="row" id="studentLayout"></div>
 			</div>
 			
 			<div class="col-sm-4 col-0"></div>
