single user functionality

--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
 					<div class="row selrow">
 						<div class="mb-3 col-12 col-sm-8">
 							<input
+								name="regno"
 								type="text"
 								class="form-control regbox inria"
-								id="Surname"
+								id="indexregno"
 								placeholder="REGISTRATION NUMBER"
 							/>
 						</div>
