single user functionality

--- a/table.html
+++ b/table.html
@@ -47,7 +47,7 @@
 				</thead>
 				<tbody id="table"></tbody>
 			</table>
-			<button onclick="addtab();" style="width: auto">CLICK ME</button>
+			<button onclick="addtab();" style="width: auto">RELOAD</button>
 		</div>
 	</body>
 	<script src="app.js"></script>
