--- a/register.html
+++ b/register.html
@@ -81,7 +81,7 @@
 						<div class="row selrow">
 							<div class="mb-3 col-12 col-sm-12">
 								<label for="phonenumber" class="inria">GENDER</label>
-								<select name="gender" class="form-control form-control-sm">
+								<select name="gender" class="form-control regbox inria form-control-sm">
 									<option value="Female">Female</option>
 									<option value="Male">Male</option>
 								</select>
