single user functionality

--- a/register.html
+++ b/register.html
@@ -81,9 +81,12 @@
 						<div class="row selrow">
 							<div class="mb-3 col-12 col-sm-12">
 								<label for="phonenumber" class="inria">GENDER</label>
-								<select name="gender" class="form-control regbox inria form-control-sm">
-									<option value="Female">Female</option>
-									<option value="Male">Male</option>
+								<select
+									name="gender"
+									class="form-control regbox inria form-control-sm"
+								>
+									<option value="F">Female</option>
+									<option value="M">Male</option>
 								</select>
 							</div>
 						</div>
@@ -92,7 +95,7 @@
 								<label for="regnumber" class="inria">REGISTRATION NUMBER</label>
 								<input
 									type="text"
-									name="registrationnumber"
+									name="reg_number"
 									class="form-control regbox inria"
 									id="regnumber"
 									placeholder="REGISTRATION NUMBER"
