--- a/register.html
+++ b/register.html
@@ -111,6 +111,7 @@
 							>
 								UPLOAD INFO
 							</button>
+							<div class="col-sm-6 col-12 takebutton inria" id="loading"></div>
 						</div>
 						<div class="row selrow pt-2 pb-2">
 							<a style="color: blue" class="inria" id="test" href="index.html"
