form push functionality test

--- a/register.html
+++ b/register.html
@@ -111,7 +111,11 @@
 							>
 								UPLOAD INFO
 							</button>
-							<div class="col-sm-6 col-12 takebutton inria" id="loading"></div>
+							<div
+								class="row col-sm-6 col-12 inria"
+								style="color: black"
+								id="loading"
+							></div>
 						</div>
 						<div class="row selrow pt-2 pb-2">
 							<a style="color: blue" class="inria" id="test" href="index.html"
