--- a/register.html
+++ b/register.html
@@ -111,6 +111,8 @@
 							>
 								UPLOAD INFO
 							</button>
+						</div>
+						<div class="row selrow">
 							<div
 								class="row col-sm-6 col-12 inria"
 								style="color: black"
