--- a/register.html
+++ b/register.html
@@ -117,7 +117,8 @@
 								class="row col-sm-6 col-12 inria"
 								style="color: black"
 								id="loading"
-							></div>
+							>
+							</div>
 						</div>
 						<div class="row selrow pt-2 pb-2">
 							<a style="color: blue" class="inria" id="test" href="index.html"
