--- a/register.html
+++ b/register.html
@@ -125,6 +125,9 @@
 								>Look for existing student?</a
 							>
 						</div>
+						<div class="row selrow pt-2">
+						<div class="row selrow" style="color: red;" id="err"></div>
+						</div>
 					</form>
 				</div>
 				<div class="col-0 col-sm-3"></div>
