if reg already exists

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					</div>
 					<div class="row selrow">
 						<button
-							class="btn btn-primary col-sm-8 col-12 takebutton inria"
+							class="btn btn-primary col-sm-8 col-12 takebutton inria indexsubbtn"
 							id="submit"
 							type="submit"
 							onclick="printOne();"
