--- a/register.html
+++ b/register.html
@@ -104,6 +104,18 @@
 							</div>
 						</div>
 						<div class="row selrow">
+							<div class="mb-3 col-12 col-sm-12">
+								<label for="profpicture" class="inria">PROFILE PICTURE</label>
+								<input
+									accept="image/png, image/jpg"
+									type="file"
+									name="profile_picture"
+									id="profpicture"
+								/>
+								
+							</div>
+						</div>
+						<div class="row selrow">
 							<button
 								class="btn btn-primary col-sm-6 col-12 takebutton inria"
 								id="submit"
@@ -117,8 +129,7 @@
 								class="row col-sm-6 col-12 inria"
 								style="color: black"
 								id="loading"
-							>
-							</div>
+							></div>
 						</div>
 						<div class="row selrow pt-2 pb-2">
 							<a style="color: blue" class="inria" id="test" href="index.html"
@@ -126,7 +137,7 @@
 							>
 						</div>
 						<div class="row selrow pt-2">
-						<div class="row selrow" style="color: red;" id="err"></div>
+							<div class="row selrow" style="color: red" id="err"></div>
 						</div>
 					</form>
 				</div>
