--- a/register.html
+++ b/register.html
@@ -107,12 +107,11 @@
 							<div class="mb-3 col-12 col-sm-12">
 								<label for="profpicture" class="inria">PROFILE PICTURE</label>
 								<input
-									accept="image/png, image/jpg"
+									accept="image/png, image/jpg, image/jpeg"
 									type="file"
 									name="profile_picture"
 									id="profpicture"
 								/>
-								
 							</div>
 						</div>
 						<div class="row selrow">
