--- a/register.html
+++ b/register.html
@@ -40,7 +40,7 @@
 					<div class="row selrow">
 						<span class="centertext2 col-12">REGISTER A STUDENT</span>
 					</div>
-					<form id="regform">
+					<form id="regform" enctype="multipart/form-data">
 						<div class="row selrow">
 							<div class="mb-3 col-12 col-sm-6">
 								<label for="Surname" class="inria">SURNAME</label>
@@ -108,7 +108,7 @@
 								<label for="profpicture" class="inria">PROFILE PICTURE</label>
 								<input
 									accept="image/png, image/jpg, image/jpeg"
-									type="file"
+									type="image"
 									name="profile_picture"
 									id="profpicture"
 								/>
