--- a/register.html
+++ b/register.html
@@ -108,7 +108,7 @@
 								<label for="profpicture" class="inria">PROFILE PICTURE</label>
 								<input
 									accept="image/png, image/jpg, image/jpeg"
-									type="image"
+									type="file"
 									name="profile_picture"
 									id="profpicture"
 								/>
